# RP2040TouchLCDExp

./: .gitmodules  README.md
examples/Gyro/: CMakeLists.txt
examples/Gyro/src/: CMakeLists.txt  main.cpp
examples/helloWorld/: CMakeLists.txt
examples/helloWorld/src/: CMakeLists.txt  main.cpp
examples/lvglHack/: CMakeLists.txt  lvgl.cmake
examples/lvglHack/src/: CMakeLists.txt  LVGL_example.c
examples/lvglProject/: CMakeLists.txt
examples/lvglProject/port/lvgl/: lv_conf.h
examples/lvglProject/src/: CMakeLists.txt  LVGL_example.c  LVGL_example.h  Widgets.c  main.c
examples/touch/src/: main.cpp  t.txt
lib/Config/: CMakeLists.txt
lib/Fonts/: CMakeLists.txt
lib/GUI/: CMakeLists.txt
lib/LCD/: CMakeLists.txt
lib/QMI8658/: CMakeLists.txt
lib/Touch/: CMakeLists.txt
lib/lvgl_loc/docs/: requirements.txt
